// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Hubspot's upsertCompany destination action: all fields 1`] = `
[FetchError: request to https://api.hubapi.com/crm/v3/objects/companies/wEehCy&KAKMYU6K?idProperty=segment_group_id failed, reason: Nock: No match for request {
  "method": "PATCH",
  "url": "https://api.hubapi.com/crm/v3/objects/companies/wEehCy&KAKMYU6K?idProperty=segment_group_id",
  "headers": {
    "authorization": [
      "Bearer undefined"
    ],
    "user-agent": [
      "Segment (Actions)"
    ],
    "content-type": [
      "application/json"
    ],
    "accept": [
      "*/*"
    ],
    "content-length": [
      "427"
    ],
    "accept-encoding": [
      "gzip,deflate"
    ],
    "connection": [
      "close"
    ]
  },
  "body": "{\\"properties\\":{\\"name\\":\\"wEehCy&KAKMYU6K\\",\\"description\\":\\"wEehCy&KAKMYU6K\\",\\"createdate\\":\\"wEehCy&KAKMYU6K\\",\\"address\\":\\"wEehCy&KAKMYU6K\\",\\"city\\":\\"wEehCy&KAKMYU6K\\",\\"state\\":\\"wEehCy&KAKMYU6K\\",\\"zip\\":\\"wEehCy&KAKMYU6K\\",\\"domain\\":\\"wEehCy&KAKMYU6K\\",\\"phone\\":\\"wEehCy&KAKMYU6K\\",\\"numberofemployees\\":3153531238350848,\\"industry\\":\\"wEehCy&KAKMYU6K\\",\\"lifecyclestage\\":\\"weehcy&kakmyu6k\\",\\"segment_group_id\\":\\"wEehCy&KAKMYU6K\\",\\"testType\\":\\"wEehCy&KAKMYU6K\\"}}"
}]
`;

exports[`Testing snapshot for Hubspot's upsertCompany destination action: required fields 1`] = `
[FetchError: request to https://api.hubapi.com/crm/v3/objects/companies/wEehCy&KAKMYU6K?idProperty=segment_group_id failed, reason: Nock: No match for request {
  "method": "PATCH",
  "url": "https://api.hubapi.com/crm/v3/objects/companies/wEehCy&KAKMYU6K?idProperty=segment_group_id",
  "headers": {
    "authorization": [
      "Bearer undefined"
    ],
    "user-agent": [
      "Segment (Actions)"
    ],
    "content-type": [
      "application/json"
    ],
    "accept": [
      "*/*"
    ],
    "content-length": [
      "78"
    ],
    "accept-encoding": [
      "gzip,deflate"
    ],
    "connection": [
      "close"
    ]
  },
  "body": "{\\"properties\\":{\\"name\\":\\"wEehCy&KAKMYU6K\\",\\"segment_group_id\\":\\"wEehCy&KAKMYU6K\\"}}"
}]
`;
